--- a/css/styles.css
+++ b/css/styles.css
@@ -425,6 +425,7 @@ hr {
     height: 55px;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: rgb(0, 255, 255);
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
@@ -444,6 +445,10 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: black;
+}
+.links > a:hover {
+    color: black;
 }
 .icon1{
     font-size: 1.15rem;
