--- a/css/contact.css
+++ b/css/contact.css
@@ -273,9 +273,10 @@ footer{
 
 .mobile-nav{
     width: 90%;
-    height: 45px;
+    height: 55px;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: rgb(0, 255, 255);
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
@@ -295,6 +296,9 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.footer-links > a{
+    color: white !important;
 }
 .icon1{
     font-size: 1.15rem;
@@ -339,7 +343,7 @@ footer{
     }
 
     p {
-        font-size: .7rem;
+        font-size: 1rem;
     }
     .mobile-nav{
         display: flex;
