--- a/css/about.css
+++ b/css/about.css
@@ -1,14 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Josefin+Sans:wght@100;300&display=swap');
+
 * {
     padding: 0%;
     margin: 0%;
     overflow-x: hidden;
 }
+
+div{
+    z-index: inherit;
+}
+
+span{
+    position: relative;
+}
+
+header span::before{
+    content: "";
+    background-color: #52b788;
+    animation: reveal 2s ease forwards;
+    position: absolute;
+    inset: 0;
+}
+
+@keyframes reveal {
+    to {
+        left: 100%;
+    }
+}
+
 h1,h2,h3,h4,h5.h6{
     font-family: sans-serif;
 }
 
 html::-webkit-scrollbar-thumb {
-    background-color: aqua;
+    background-color: #52b788;
 }
 
 html::-webkit-scrollbar-track {
@@ -22,23 +47,20 @@ html::-webkit-scrollbar {
 body {
     background-color: black;
     user-select: none;
+    z-index: -2;
 }
 
 a {
     cursor: pointer;
     text-decoration: none;
-    color: black;
-
+    color: black ;
+    z-index: 0;
 }
 
 a:hover{
     color: white;
 }
 
-a:active {
-    border-bottom: 1px aqua solid;
-
-}
 
 button {
     cursor: pointer;
@@ -52,19 +74,20 @@ li {
     text-align: center;
     margin-bottom: 20px;
     cursor: pointer;
+    z-index: 0;
 }
 
-ul:first-child  {
+ul:first-child {
     margin-top: 100px;
 }
 
 
-.active{
+.active {
     background-color: black;
 }
 
 .active>a {
-    color: aqua !important;
+    color: #52b788 !important;
 }
 
 
@@ -72,20 +95,22 @@ ul:first-child  {
     width: 100%;
     display: flex;
     position: relative;
+    z-index: 0;
 }
 
 .navbar {
     height: 660px;
     width: 10%;
-    background-color: aqua;
+    background-color: #52b788;
+    z-index: 0;
 }
 
 nav {
     width: 100%;
     height: 100%;
     overflow-y: hidden;
+    z-index: 0;
 }
-
 
 .hero-pic {
     width: 90%;
@@ -98,28 +123,20 @@ nav {
 }
 
 .hero-pic .bg {
-    width: 90%;
-    height: 580px;
+    width: 100%;
     object-fit: cover;
-    transform: translate(20px, 30px);
-    opacity: .7;
+    opacity: .6;
+    height: 660px;
 }
 
-.hero-des {
-    width: 90%;
-    height: 580px;
-    border: 5px solid aqua;
-    position: absolute;
-    left: 3% !important;
-    top: 3% !important;
-}
 
 .hero-txt {
     position: absolute;
     left: 10% !important;
+    z-index: 1;
 }
 .hero-txt > h1 > span{
-    color: aqua;
+    color: #52b788;
 }
 
 
@@ -141,7 +158,7 @@ ul {
     flex-direction: column;
     align-items: center;
     height: 100%;
-
+    z-index: 0;
 }
 
 
@@ -149,7 +166,7 @@ ul {
 header {
     background-color: black;
     background-size: cover;
-    min-height: 1000px;
+    height: 700px;
     width: 100%;
     position: relative;
 }
@@ -161,6 +178,8 @@ header h1 {
     font-weight: bolder;
 }
 
+
+
 section{
     color: white;
     padding: 5%;
@@ -170,12 +189,12 @@ section{
 
 hr{
     width: 40%;
-    border: 2px aqua solid;
+    border: 2px #52b788 solid;
     margin: 2% 0;
 }
 
 #googlemap{
-    border: 2px aqua solid;
+    border: 2px #52b788 solid;
     width: 100%;
 }
 
@@ -186,24 +205,55 @@ img{
 }
 
 
+.mobile-nav{
+    width: 90%;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #40916c;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    position: fixed;
+    bottom: 0;
+    margin: 0 5%;
+    border-radius: 16px 16px 0 0;
+    display: none;
+    z-index: 0;
+}
+
+
+.links{
+    width: 25%;
+} 
+
+.links > a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.icon1{
+    font-size: 1.15rem;
+}
+
 footer{
     height: 150px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     color: white;
     justify-content: center;
     align-items: center;
 }
 
 .footer-img-box{
-    width: 40%;
+    width: 15%;
     height: 100px;
     display: flex;
     justify-content: center;
 }
 
 .footer-img-box img{
-    width: 20%;
+    width: 100%;
     height: 100%;
 }
 
@@ -223,48 +273,15 @@ footer{
     width: 100%;
     height: 50px;
     justify-content: center;
-    background-color: aqua;
+    background-color: #52b788;
     color: black;
     display: flex;
     align-items: center;
 }
 
-.mobile-nav{
-    width: 90%;
-    height: 55px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(0, 255, 255);
-    backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px);
-    position: fixed;
-    bottom: 0;
-    margin: 0 5%;
-    border-radius: 16px 16px 0 0;
-    display: none;
-}
-
-
-.links{
-    width: 25%;
-} 
-
-.links > a{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.footer-links > a{
-    color: white !important;
-}
-.icon1{
-    font-size: 1.15rem;
-}
-
 @media only screen and (max-width:900px) {
     body {
-        background-color: black ;
+        background-color: black !important;
     }
 
     #header {
@@ -279,18 +296,44 @@ footer{
     }
 
     .hero h1 {
-        font-size: 2.5rem;
+        font-size: 3.5rem;
     }
 
+    .hero h3 {
+        font-size: 1rem;
+    }
 
     .navbar {
         display: none;
     }
 
+
     .hero-pic {
         width: 100%;
         overflow-y: hidden;
+        height: 600px;
     }
+
+    .hero-des{
+        left: 1% !important;
+        
+    }
+
+
+    .hero-pic .bg{
+        transform: translate(0, 0);
+        height: 600px;
+    }
+
+    .hero-txt{
+        left: 0 !important;
+    }
+
+    .logo{
+        top: 0px;
+    }
+
+
 
     p {
         font-size: 1rem;
@@ -300,15 +343,16 @@ footer{
     }
 
     footer{
-        margin-bottom: 45px;
+        margin-bottom: 55px;
     }
 
     .footer-img-box{
-        width: 20%;
+        width: 28%;
     }
 
     .footer-img-box img{
-        width: 80%;
+        width: 100%;
+        object-fit: unset;
     }
 
     .footer-links{
@@ -320,4 +364,3 @@ footer{
         color: white;
     }
 }
-
